# nest2d

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  input.css  package-lock.json  package.json
desktop/: Cargo.toml
src/: engine.rs  main.rs
src/components/: createprojectinputs.rs  list.rs  listprojects.rs  mod.rs  partsrow.rs  progress.rs  progressbar.rs  projectsrow.rs  projectstable.rs  sheetsrow.rs  sheetstable.rs
src/components/navbar/: mod.rs  navbar.rs  navbarrow.rs
src/views/: config.rs  configuration.rs  home.rs  mod.rs  nesting.rs  parts.rs  projects.rs  sheets.rs  shell.rs
